# num_analysis_5th_sem

approximation/: pyproject.toml
approximation/data/: points.json
approximation/src/: main.py
bisection_method/: pyproject.toml
bisection_method/src/: methods.py  methods_test.py
diff_eq/: pyproject.toml
diff_eq/src/: approximation.py  main.py
gaussian_elimination/: pyproject.toml
gaussian_elimination/data/: system.json
gaussian_elimination/src/: main.py
interpolation/: pyproject.toml
interpolation/src/: main.py
num_integration/: pyproject.toml
num_integration/src/: main.py
simple_iteration_method/: pyproject.toml
simple_iteration_method/data/: system.json
simple_iteration_method/src/: main.py
