[tool.poetry]
name = "bisection-method"
version = "0.1.0"
description = ""
authors = ["Ivan Mihun <vsk76090@gmail.com>"]
readme = "README.md"
packages = [{include = "bisection_method"}]

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
