[tool.poetry]
name = "simple-iteration-method"
version = "0.1.0"
description = ""
authors = ["Ivan Mihun <vsk76090@gmail.com>"]
readme = "README.md"
packages = [{include = "simple_iteration_method"}]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
